adding number of tx bad

--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -347,7 +347,7 @@ It presents statistics gathered over July 15-25 2016 period in the PEACH orchard
         \toprule
         {}	 							& PEACH 				  & EVAlab \\
         \midrule
-        reliability (Arrived/Lost) 		& 100\% (693,844/0) 	  & (419,612/not measured)\\ \hline
+        reliability (Arrived/Lost) 		& 100\% (693,844/0) 	  & 100\% (419,612/0)\\ \hline
         average PDR (Transmit/Fails) 	& 95\% (4,405,569/258778) & 87\% (19,807,535/2,488,149)\\ \hline
         latency     					& 700~msec 				  & Not measured\\
         \bottomrule
