--- a/notebooks/reliability.ipynb
+++ b/notebooks/reliability.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total number of lines = 447211\nnumber of lines removed =  170714 ( 38 %)\n"
+      "total number of lines = 447211\nIndex([u'time', u'mac', u'charge', u'queueOcc', u'numTxOk', u'numTxBad',\n       u'lat', u'long'],\n      dtype='object')\nnumber of lines removed =  201319 ( 45 %)\n"
      ]
     },
     {
@@ -41,11 +41,17 @@
        "      <th>numTxPackets</th>\n",
        "      <th>numTxFailures</th>\n",
        "      <th>numRxPackets</th>\n",
+       "      <th>mote_board</th>\n",
+       "      <th>ngbr_board</th>\n",
+       "      <th>distance</th>\n",
        "      <th>pdr</th>\n",
        "      <th>date</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -69,6 +75,9 @@
        "      <td>129</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.968992</td>\n",
        "      <td>2016-11-02 10:00:52</td>\n",
        "    </tr>\n",
@@ -82,6 +91,9 @@
        "      <td>131</td>\n",
        "      <td>13</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.900763</td>\n",
        "      <td>2016-11-02 10:15:52</td>\n",
        "    </tr>\n",
@@ -95,6 +107,9 @@
        "      <td>128</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.968750</td>\n",
        "      <td>2016-11-02 10:30:51</td>\n",
        "    </tr>\n",
@@ -108,6 +123,9 @@
        "      <td>122</td>\n",
        "      <td>8</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.934426</td>\n",
        "      <td>2016-11-02 10:45:51</td>\n",
        "    </tr>\n",
@@ -121,6 +139,9 @@
        "      <td>128</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.984375</td>\n",
        "      <td>2016-11-02 11:00:51</td>\n",
        "    </tr>\n",
@@ -142,11 +163,17 @@
        "      <th>numTxPackets</th>\n",
        "      <th>numTxFailures</th>\n",
        "      <th>numRxPackets</th>\n",
+       "      <th>mote_board</th>\n",
+       "      <th>ngbr_board</th>\n",
+       "      <th>distance</th>\n",
        "      <th>pdr</th>\n",
        "      <th>date</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -170,6 +197,9 @@
        "      <td>129</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.968992</td>\n",
        "      <td>2016-11-02 10:00:52</td>\n",
        "    </tr>\n",
@@ -183,6 +213,9 @@
        "      <td>131</td>\n",
        "      <td>13</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.900763</td>\n",
        "      <td>2016-11-02 10:15:52</td>\n",
        "    </tr>\n",
@@ -196,6 +229,9 @@
        "      <td>128</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.968750</td>\n",
        "      <td>2016-11-02 10:30:51</td>\n",
        "    </tr>\n",
@@ -209,6 +245,9 @@
        "      <td>122</td>\n",
        "      <td>8</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.934426</td>\n",
        "      <td>2016-11-02 10:45:51</td>\n",
        "    </tr>\n",
@@ -222,6 +261,9 @@
        "      <td>128</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.984375</td>\n",
        "      <td>2016-11-02 11:00:51</td>\n",
        "    </tr>\n",
@@ -230,21 +272,25 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/hr_neighbors.csv\", usecols=range(8))\n",
+    "df = pd.read_csv(\"../data/hr_neighbors.csv\")\n",
+    "df_dev = pd.read_csv(\"../data/hr_device.csv\")\n",
     "print \"total number of lines =\", len(df)\n",
     "\n",
-    "excluded_macs = [\"00-17-0d-00-00-b0-00-cc\",\n",
-    "                 \"00-17-0d-00-00-b0-00-aa\",\n",
-    "                 \"00-17-0d-00-00-b0-00-87\"]\n",
+    "print df_dev.columns\n",
+    "\n",
+    "excluded_macs = [\"00-17-0d-00-00-58-f8-63\",\n",
+    "                 \"00-17-0d-00-00-58-f8-78\",\n",
+    "                 \"00-17-0d-00-00-58-eb-69\"]\n",
     "# removing links without communication\n",
     "df_clean = df[(df.numTxPackets > 0) & (df.numTxFailures >= 0)\n",
-    "            & (~df.mac.isin(excluded_macs))]\n",
+    "            & (~df.mac.isin(excluded_macs))\n",
+    "            & (~df.neighborMac.isin(excluded_macs))]\n",
     "lines_removed = len(df) - len(df_clean)\n",
     "print \"number of lines removed = \", lines_removed, \"(\", lines_removed*100/len(df), \"%)\"\n",
     "\n",
@@ -267,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -276,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "count    276497.000000\nmean          0.875254\nstd           0.140142\nmin           0.000000\n25%           0.842105\n50%           0.923913\n75%           0.967742\nmax           1.000000\nName: pdr, dtype: float64\nOverall PDR = 0.875253701836\nTotal Number of Transmission = 22,869,461\nTotal Number of Failed Transmission = 3,412,059\n"
+      "count    245892.000000\nmean          0.891435\nstd           0.119576\nmin           0.090909\n25%           0.859155\n50%           0.932836\n75%           0.968254\nmax           1.000000\nName: pdr, dtype: float64\nOverall PDR = 0.891434926523\nTotal Number of Transmission = 19,807,535\nTotal Number of Failed Transmission = 2,488,149\nTotal number of packets lost = 0\nStart date : 2016-11-02 10:00:52\nEnd date : 2017-02-16 09:56:07\n"
      ]
     }
    ],
@@ -285,7 +331,11 @@
     "\n",
     "print \"Overall PDR =\", df_clean.pdr.mean()\n",
     "print \"Total Number of Transmission =\", \"{:,}\".format(df_clean.numTxPackets.sum())\n",
-    "print \"Total Number of Failed Transmission =\", \"{:,}\".format(df_clean.numTxFailures.sum())"
+    "print \"Total Number of Failed Transmission =\", \"{:,}\".format(df_clean.numTxFailures.sum())\n",
+    "print \"Total number of packets lost = {0}\".format(df_dev.numTxBad.sum())\n",
+    "\n",
+    "print \"Start date :\", df_clean.date.min()\n",
+    "print \"End date :\", df_clean.date.max()"
    ]
   },
   {
