change pisterhack legend

--- a/notebooks/Pister_Hack.ipynb
+++ b/notebooks/Pister_Hack.ipynb
@@ -131,7 +131,7 @@
     "friis_line2_x = [df_reduced.distance.min(), df_reduced.distance.max()]\n",
     "friis_line2_y = [friis(d)-40 for d in [df_reduced.distance.min(), df_reduced.distance.max()]]\n",
     "\n",
-    "plt.plot(df_reduced.distance, df_reduced.rssi, '+')\n",
+    "plt.plot(df_reduced.distance, df_reduced.rssi, '+', label=\"measured\")\n",
     "plt.plot(friis_line1_x, friis_line1_y, '-', label=\"Friis model\")\n",
     "plt.plot(friis_line2_x, friis_line2_y, '-', label=\"Friis model -40dB\")\n",
     "\n",
