reploting figures with new dataset

--- a/notebooks/global_stats.ipynb
+++ b/notebooks/global_stats.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HR_NEIGHBORS 144217\nHR_DISCOVERED 126906\nHR_DEVICE 144270\nSNAPSHOT 43402\nEVENT_PATHCREATE 2149\nEVENT_PATHDELETE 2070\nTEMPERATURE 44264\n\nTotal msg number: 463876\n"
+      "HR_NEIGHBORS 117350\nHR_DISCOVERED 101958\nHR_DEVICE 117371\nSNAPSHOT 35572\nEVENT_PATHCREATE 2149\nEVENT_PATHDELETE 2070\nTEMPERATURE 44264\n\nTotal stats number: 376470\nTotal msg number: 420734\n"
      ]
     }
    ],
@@ -47,14 +47,17 @@
     "print \"EVENT_PATHDELETE\", len(df_epd)\n",
     "print \"TEMPERATURE\", len(df_tmp)\n",
     "\n",
-    "total = len(df_nbr_cln)+\\\n",
+    "total_stats = len(df_nbr_cln)+\\\n",
     "        len(df_dis_cln)+\\\n",
     "        len(df_dev_cln)+\\\n",
     "        len(df_epc)+\\\n",
     "        len(df_epd)+\\\n",
-    "        len(df_tmp)\n",
+    "        len(df_snp)\n",
+    "        \n",
+    "total = total_stats + len(df_tmp)\n",
     "            \n",
-    "print \"\\nTotal msg number:\", total"
+    "print \"\\nTotal stats number:\", total_stats\n",
+    "print \"Total msg number:\", total"
    ]
   },
   {
