adding figure titles

--- a/notebooks/PEACH/waterfall.ipynb
+++ b/notebooks/PEACH/waterfall.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -26,19 +26,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total number of lines = 469819\nnumber of lines left =  106739 ( 22.7191748312 % )\nnumber of lines removed =  363080 ( 77.2808251688 % )\n"
+      "total number of lines = 140897\nnumber of lines left =  69643 ( 49.4283057837 % )\nnumber of lines removed =  71254 ( 50.5716942163 % )\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/dist-packages/IPython/core/interactiveshell.py:2717: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n  interactivity=interactivity, compiler=compiler, result=result)\n"
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/indexing.py:297: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n  self.obj[key] = _infer_fill_value(value)\n/usr/local/lib/python2.7/dist-packages/pandas/core/indexing.py:477: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n  self.obj[item] = s\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/PEACH/hr_neighbors_prev.csv\")\n",
+    "df = pd.read_csv(\"../data/PEACH/hr_neighbors_prev.csv\").drop_duplicates([\"time\", \"mac\"])\n",
     "\n",
     "print \"total number of lines =\", len(df)\n",
     "\n",
@@ -48,7 +48,7 @@
     "\n",
     "df_clean = df[(df.numTxPackets > 0) & (df.numTxFailures >= 0) & (df.rssi < 0)\n",
     "              & (~df.mac.isin(excluded_macs)) & (~df.neighborMac.isin(excluded_macs)) \n",
-    "             ].drop_duplicates([\"time\", \"mac\"])\n",
+    "             ]\n",
     "\n",
     "df_clean.loc[:, 'pdr'] = pd.Series(\n",
     "                            (df_clean.numTxPackets - df_clean.numTxFailures) / df_clean.numTxPackets,\n",
