adapting lifetime section

--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -396,10 +396,9 @@ This number allows us to predict the lifetime of the device.
 
 Table~\ref{tab:stats_charge} shows charge consumed by the motes over the two 3~month periods, as well as the portion of the battery this represents.
 Assuming the same energy consumption rate, we can extrapolate the lifetime.
-The node with the longest lifetime is {\tt 60-02-4b}.
-From Fig.~\ref{fig:peach_map}, we can see that this is a leaf node.
+The nodes with the longest lifetime (8 years) are all leaf nodes as we can see from Fig.~\ref{fig:peach_map}.
 Since it does not have to relay data from any children, it is normal that this node consumes very little.
-The node with the shortest lifetime is {\tt 60-03-82} and has 5~years of lifetime.
+The node with the shortest lifetime is {\tt 30-60-ef} and has 4~years of lifetime, it is normal as this node has an external antenna and relays a lot of data.
 This shows the ultra-low power consumption of the \smip network.
 
 \begin{table}
